--- a/css/default.css
+++ b/css/default.css
@@ -31,7 +31,14 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 }
 
 
-#wrap{height: 100%; width:100%; max-width:768px;}
+#wrap{height: 100%; width:100%; max-width:768px; position:relative;}
+#wrap .splashy{height:100%; display:table; margin:0 auto;}
+#wrap .splashy .splashy_logo{display:table-cell; vertical-align:middle; padding:50px;}
+#wrap .splashy .splashy_logo img{width:100%;}
+#wrap .splashy_bot{position:absolute; bottom:30px; width:100%; text-align:center;}
+#wrap .splashy_bot p{display:inline-block;}
+#wrap .splashy_bot p img{width:60%;}
+
 /* 메인페이지 header */
 #header{max-width:768px; width:100%; height:80px; position:relative; padding:15px; background:#849c23; z-index:999; top:0; color:#fff; text-align:center;}
 #header:after{display:block; content:''; clear:both;}
@@ -46,6 +53,22 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 #content .current_time p.current_txt{float:left; font-weight:400;}
 #content .current_time p.time{float:right; font-weight:500;}
 #content .current_time:after{display:block; content:''; clear:both;}
+
+/* 메뉴 3개*/
+/* #content .work_btn p{display:inline-block; width:32.33%; text-align:center;} */
+
+/* 메뉴 2개*/
+#content .work_btn p{display:inline-block; width:49.5%; text-align:center;}
+#content .work_btn p a{font-size:1.4em; color:#849c23;}
+
+#content .adm_modify p.modify_btn{width:100%; font-size:1.4em;}
+#content .adm_modify p.modify_btn a{width:100%; font-weight:500; color:#333;}
+
+#content .work_btn p a{width:100%;}
+
+#footer{padding:0 15px; background:#e9e9e9;}
+#footer .footer_menu ul li{display:inline-block; width:49.5%; text-align:center;}
+#footer .footer_menu ul li a{color:#333; width:100%; font-size:1.4em;}
 
 #modal_office.in .modal-dialog{position:absolute; bottom:0; width:100%; margin:0;
 -webkit-transform: translate(0,0);
@@ -69,18 +92,3 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
   }
 }
 
-/* 메뉴 3개*/
-/* #content .work_btn p{display:inline-block; width:32.33%; text-align:center;} */
-
-/* 메뉴 2개*/
-#content .work_btn p{display:inline-block; width:49.5%; text-align:center;}
-#content .work_btn p a{font-size:1.4em; color:#849c23;}
-
-#content .adm_modify p.modify_btn{width:100%; font-size:1.4em;}
-#content .adm_modify p.modify_btn a{width:100%; font-weight:500; color:#333;}
-
-#content .work_btn p a{width:100%;}
-
-#footer{padding:0 15px; background:#e9e9e9;}
-#footer .footer_menu ul li{display:inline-block; width:49.5%; text-align:center;}
-#footer .footer_menu ul li a{color:#333; width:100%; font-size:1.4em;}
