모달작업완료

--- a/css/default.css
+++ b/css/default.css
@@ -90,3 +90,11 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 #footer .footer_menu ul li a span.home_img.on{background-position:-13px -124px;}
 #footer .footer_menu ul li a span.report_img.on{background-position:-47px -124px;}
 
+#modal_in .modal-dialog{position:absolute; bottom:0; margin:0; width:100%;}
+#modal_in .modal-dialog .modal-content{border-radius:0; border:none;}
+#modal_in .modal-dialog .modal-header button{position:absolute; left:15px; font-size:2.0em; color:#849c23; text-shadow:none; opacity:1; font-weight:400;}
+#modal_in .modal-dialog .modal-header h4{text-align:center; font-size:1.4em; font-weight:500;}
+.modal-body p{text-align:center; font-size:1.4em; font-weight:400;}
+.modal-body p span.green{color:#849c23; font-weight:500;}
+.modal-footer{padding:0;}
+.modal-footer button{width:100%; background:#849c23; color:#fff; font-size:1.4em; border:none; border-radius:0; padding:15px;}
