--- a/css/default.css
+++ b/css/default.css
@@ -112,7 +112,7 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 #sub_content .list_button{float:right; padding-top:19px;}
 #sub_content .list_button button{border-radius:0; border:1px solid #849c23; color:#849c23; background:#fff; padding:5px 10px; font-size:1.2em;}
 
-#footer{background:#e9e9e9; width:100%; position:fixed; bottom:0;}
+#footer{background:#e9e9e9; width:100%; max-width:768px; position:fixed; bottom:0;}
 #footer .footer_menu ul:after{display:block; content:''; clear:both;}
 #footer .footer_menu ul li{float:left; width:50%; text-align:center;}
 #footer .footer_menu ul li:first-child{border-right:1px solid #d9d9d9;}
