--- a/css/default.css
+++ b/css/default.css
@@ -163,7 +163,7 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 #mon_modify .work_form .label_list{margin-bottom:10px;}
 #mon_modify .work_form .label_list label{font-size:1.4em; color:#333; font-weight:400; padding:0; display:inline-block; width:20%; text-align:left;}
 #mon_modify .work_form .label_list input{width:74%; margin-left:5%; color:#333; display:inline-block; font-size:1.2em;}
-#mon_modify .work_form .label_list p.invalid{text-align:right; display:inline-block; padding-left:26%; font-size:1.3em; color:#ff0000; margin-top:5px;}
+#mon_modify .work_form .label_list p.invalid{text-align:right; display:inline-block; padding-left:26%; font-size:1.3em; color:#ff0000; margin-top:5px; display:none;}
 
 #mon_modify .work_form .label_list .label_form:after{display:block; content:''; clear:both;}
 #mon_modify .work_form .label_list textarea{width:74%; float:right; margin-left:5%; border:1px solid #d9d9d9; border-radius:0; box-shadow: none;}
