--- a/css/default.css
+++ b/css/default.css
@@ -141,9 +141,9 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 
 
 #mon_modify{padding-right:0 !important;}
-#mon_modify .modal-body{height:100%; background:#fff;}
-#mon_modify .modal-dialog{margin:0 auto; width:100%; max-width:768px; height:100%; background:#fff; position:relative;}
-#mon_modify .modal-content{border-radius:0; border:none; height:100%; box-shadow:none;}
+#mon_modify .modal-body{background:#fff;}
+#mon_modify .modal-dialog{margin:0 auto; width:100%; max-width:768px; background:#fff; position:relative; height:100%;}
+#mon_modify .modal-content{border-radius:0; border:none; box-shadow:none; height:100%;}
 #mon_modify .modal-dialog .modal-header button{position:absolute; left:15px; font-size:2.0em; color:#849c23; text-shadow:none; opacity:1; font-weight:400;}
 #mon_modify .modal-dialog .modal-header h4{text-align:center; font-size:1.6em; font-weight:500;}
 #mon_modify .now_info{border-bottom:1px solid #d9d9d9; padding-bottom:20px;}
@@ -160,10 +160,10 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 #mon_modify .work_form .label_list:after{display:block; content:''; clear:both;}
 #mon_modify .work_form p label{color:#333; display:inline-block; font-size:1.4em; font-weight:400; padding:0;}
 #mon_modify .work_form input{border:0; border-bottom:1px solid #d9d9d9; border-radius:0; box-shadow: none;}
-#mon_modify .work_form .label_list{margin-bottom:10px;}
+#mon_modify .work_form .label_list{margin-bottom:10px; position:relative;}
 #mon_modify .work_form .label_list label{font-size:1.4em; color:#333; font-weight:400; padding:0; display:inline-block; width:20%; text-align:left;}
 #mon_modify .work_form .label_list input{width:74%; margin-left:5%; color:#333; display:inline-block; font-size:1.2em;}
-#mon_modify .work_form .label_list p.invalid{text-align:right; display:inline-block; padding-left:26%; font-size:1.3em; color:#ff0000; margin-top:5px; display:none;}
+#mon_modify .work_form .label_list p.invalid{text-align:right; display:block; padding-left:26%; font-size:1.3em; color:#ff0000; margin-top:5px; display:inline-block;}
 
 #mon_modify .work_form .label_list .label_form:after{display:block; content:''; clear:both;}
 #mon_modify .work_form .label_list textarea{width:74%; float:right; margin-left:5%; border:1px solid #d9d9d9; border-radius:0; box-shadow: none;}
@@ -173,7 +173,7 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 #mon_modify .work_form h2{font-size:1.5em;}
 
 
-#mon_modify .modal-footer{padding:0; bottom:0; overflow:hidden; text-align:center; width:100%;}
+#mon_modify .modal-footer{padding:0; position:fixed; bottom:auto; overflow:hidden; text-align:center; width:100%;}
 #mon_modify .modal-footer button{width:100%; background:#849c23; color:#fff; font-size:1.5em; border:none; border-radius:0; padding:15px;}
 
 
