--- a/css/default.css
+++ b/css/default.css
@@ -144,7 +144,7 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 
 
 #mon_modify{padding-right:0 !important;}
-#mon_modify .modal-body{background:#fff;}
+#mon_modify .modal-body{background:#fff; padding-bottom:70px;}
 #mon_modify .modal-dialog{margin:0 auto; width:100%; max-width:768px; background:#fff; position:relative; height:100%;}
 #mon_modify .modal-content{border-radius:0; border:none; box-shadow:none; height:100%;}
 #mon_modify .modal-dialog .modal-header button{position:absolute; left:15px; font-size:2.0em; color:#849c23; text-shadow:none; opacity:1; font-weight:400;}
@@ -176,7 +176,7 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 #mon_modify .work_form h2{font-size:1.5em;}
 
 
-#mon_modify .modal-footer{padding:0; position:fixed; bottom:auto; overflow:hidden; text-align:center; width:100%;}
+#mon_modify .modal-footer{padding:0; position:fixed; bottom:0; overflow:hidden; text-align:center; width:100%;}
 #mon_modify .modal-footer button{width:100%; background:#849c23; color:#fff; font-size:1.5em; border:none; border-radius:0; padding:15px;}
 
 
