--- a/css/default.css
+++ b/css/default.css
@@ -145,10 +145,12 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 
 #mon_modify{padding-right:0 !important;}
 #mon_modify .modal-body{background:#fff; padding-bottom:70px;}
+/*
 #mon_modify .modal-dialog{margin:0 auto; width:100%; max-width:768px; background:#fff; position:relative; height:100%;}
+*/
 #mon_modify .modal-content{border-radius:0; border:none; box-shadow:none; height:100%;}
-#mon_modify .modal-dialog .modal-header button{position:absolute; left:15px; font-size:2.0em; color:#849c23; text-shadow:none; opacity:1; font-weight:400;}
-#mon_modify .modal-dialog .modal-header h4{text-align:center; font-size:1.6em; font-weight:500;}
+#mon_modify .modal-header button{position:absolute; left:15px; font-size:2.0em; color:#849c23; text-shadow:none; opacity:1; font-weight:400;}
+#mon_modify .modal-header h4{text-align:center; font-size:1.6em; font-weight:500;}
 #mon_modify .now_info{border-bottom:1px solid #d9d9d9; padding-bottom:20px;}
 #mon_modify .now_info .now:after{display:block; content:''; clear:both;}
 #mon_modify .now_info p{font-size:1.4em;	color:#333;}
