--- a/css/default.css
+++ b/css/default.css
@@ -39,6 +39,20 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 #wrap .splashy_bot p{display:inline-block;}
 #wrap .splashy_bot p img{width:60%;}
 
+/* 휴대전화번호 입력 페이지 */
+#in_content{display:table; width:100%; height:100%; margin:0 auto; text-align:center;}
+#in_content .phone_area{display:table-cell; vertical-align:middle; padding-left:20px; padding-right:20px;}
+#in_content .p_page{width:100%; margin:0 auto;}
+#in_content .p_page h2{font-size:1.5em; font-weight:400; line-height:1.5em;}
+#in_content .p_page h2 span.phone_img{text-indent:-9999px; position:relative; width:160px; height:160px; display:block; margin:0 auto; background:url('../images/phone.png')no-repeat; background-size:160px;}
+#in_content .p_page h2 span.green{font-weight:500; color:#849c23;}
+#in_content .p_page .label_list{margin-top:50px;}
+#in_content .p_page .label_list input.phone_form{width:100%; border:none; border-bottom:1px solid #d9d9d9; font-size:1.5em; padding:5px; color:#333;}
+#in_content .phone_area p.invalid{text-align:left; display:block; font-size:1.3em; color:#ff0000; margin-top:5px;}
+#in_content .work_btn{position:fixed; bottom:0; left:0; width:100%;}
+.work_com{width: 100%; background: #849c23; color: #fff; font-size: 1.5em; border: none; border-radius: 0; padding: 15px;}
+
+
 /* 메인페이지 header */
 #header{max-width:768px; width:100%; height:50px; position:relative; padding:10px; background:#fff; z-index:999; top:0; text-align:center; box-shadow: 1.1px 1.6px 20px 0 rgba(0, 0, 0, 0.2);}
 #header .logo{display:table; height:100%; width:100%; margin:0 auto;}
@@ -159,7 +173,7 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 #mon_modify .now_info .now:last-child{margin:0;}
 #mon_modify .now_info .now p.txt_left{float:left;}
 #mon_modify .now_info .now p.txt_right{float:right; text-align:right; line-height:1.1em;}
-#mon_modify .now_info .now p.txt_right span.modal_time{font-size:0.8em; color:#bbbbbb; font-weight:500;}
+#mon_modify .now_info .now p.txt_right span.modal_time{font-size:0.8em; color:#bbbbbb; font-weight:400;}
 
 #mon_modify .work_form h2{color:#849c23; padding-bottom:20px;}
 #mon_modify .work_form .label_list:after{display:block; content:''; clear:both;}
@@ -168,7 +182,7 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 #mon_modify .work_form .label_list{margin-bottom:10px; position:relative;}
 #mon_modify .work_form .label_list label{font-size:1.4em; color:#333; font-weight:400; padding:0; display:inline-block; width:20%; text-align:left;}
 #mon_modify .work_form .label_list input{width:74%; margin-left:5%; color:#333; display:inline-block; font-size:1.2em;}
-#mon_modify .work_form .label_list p.invalid{text-align:right; display:block; padding-left:26%; font-size:1.3em; color:#ff0000; margin-top:5px; display:inline-block;}
+#mon_modify .work_form .label_list p.invalid{text-align:right; display:block; padding-left:26%; font-size:1.3em; color:#ff0000; margin-top:5px;}
 
 #mon_modify .work_form .label_list .label_form:after{display:block; content:''; clear:both;}
 #mon_modify .work_form .label_list textarea{width:74%; float:right; margin-left:5%; border:1px solid #d9d9d9; border-radius:0; box-shadow: none;}
