--- a/css/default.css
+++ b/css/default.css
@@ -2,7 +2,7 @@
 @import url(https://cdn.jsdelivr.net/gh/theeluwin/NotoSansKR-Hestia@master/stylesheets/NotoSansKR-Hestia.css);
 
 html {overflow-y:scroll; height:100%; min-width:320px; max-width:768px; margin:0 auto;}
-body {margin:0; padding:0; font-size:1.2em; letter-spacing:-1px; background:#fff; height:100%; font-family: 'Noto Sans Korean', sans-serif;}
+body {margin:0; padding:0; font-size:1.2em; letter-spacing:-1px; background:#fff; height:100%; font-family: 'Noto Sans Korean', sans-serif; position:relative;}
 h1, h2, h3, h4, h5, h6, form, fieldset, img, label {margin:0; padding:0; border:0}
 h1, h2, h3, h4, h5, h6 {font-size:1em; font-family: 'Noto Sans Korean', sans-serif;}
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display:block}
@@ -21,7 +21,7 @@ pre {overflow-x:scroll; font-size:1.1em}
 ul,li,dl,dt,dd {padding:0;margin:0}
 ul {list-style:none}
 
-.txt_clear{position:absolute; width:18px; height:18px; top:10px; right:0px; text-indent:-9999px; background: url('../images/background_img.png')no-repeat; background-size: 400px; background-position: -292px -84px;}
+.txt_clear{position:absolute; width:18px; height:18px; top:8px; right:0px; text-indent:-9999px; background: url('../images/common_ico.png')no-repeat; background-size: 300px; padding-right:0; background-position: -268px -88px;}
 button.common_btn{position:relative; background:#fff; border:1px solid #849c23; color:#849c23; width:100%; font-weight:400; margin:10px 0; font-size:1.2em; margin:10px 0 0 0;}
 
 *,:after,:before {
@@ -108,13 +108,15 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 #sub_content .report_tit .calendar{border:none;}
 #sub_content .report_tit .calendar p a{position:relative; font-size:1.5em; color:#333;}
 #sub_content .month_report:after{display:block; content:''; clear:both;}
+#sub_content .month_report{border-bottom:1px solid #d9d9d9;}
 #sub_content .month_report p{padding:25px 20px; font-size:1.4em; color:#333; font-weight:400; float:left; width:50%; padding-right:0px;}
 #sub_content .month_report p:first-child{border-right:1px solid #d9d9d9;}
 #sub_content .month_report p:last-child{border-right:none; padding-left:20px;}
 #sub_content .month_report p span{font-weight:500; color:#849c23; font-size:1.3em;}
 #sub_content .re_list{border-top:1px solid #d9d9d9; border-bottom:1px solid #d9d9d9; border-left:0; border-right:0; margin-bottom:20px;}
-#sub_content .re_list .list_tit{font-size:1.4em; font-weight:400; background:#ededed; border-bottom:1px solid #d9d9d9;}
-#sub_content .re_list .list_tit p{padding:10px 20px;}
+#sub_content .re_list:first-child{border-top:none;}
+#sub_content .re_list .list_tit{font-size:1.2em; font-weight:400; background:#ededed; border-bottom:1px solid #d9d9d9;}
+#sub_content .re_list .list_tit p{padding:5px 20px;}
 #sub_content .re_list .list_tit:after{display:block; content:''; clear:both;}
 #sub_content .re_list .list_tit p.list_data{float:left;}
 #sub_content .re_list .list_tit p.list_time{float:right;}
@@ -130,8 +132,7 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 #sub_content .list_button{float:right; padding:10px 0;}
 #sub_content .list_button button{border-radius:0; border:1px solid #849c23; color:#849c23; background:#fff; padding:5px 10px; font-size:1.2em;}
 
-
-
+#sub_content #month_pick{border:none; font-size:1.4em; color:#333;}
 
 #footer{background:#e9e9e9; width:100%; max-width:768px; position:fixed; bottom:0;}
 #footer .footer_menu ul:after{display:block; content:''; clear:both;}
@@ -147,15 +148,15 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 #footer .footer_menu ul li.on a span.report_img{background-position:-47px -122px;}
 
 
-#modal_in .modal-dialog{position:absolute; bottom:0; margin:0; width:100%;}
-#modal_in .modal-dialog .modal-content{border-radius:0; border:none;}
-#modal_in .modal-dialog .modal-header button{position:absolute; left:15px; font-size:2.0em; color:#849c23; text-shadow:none; opacity:1; font-weight:400;}
-#modal_in .modal-dialog .modal-header h4{text-align:center; font-size:1.5em; font-weight:500;}
-#modal_in .modal-body{padding:25px;}
-#modal_in .modal-body p{text-align:center; font-size:1.5em; font-weight:400;}
-#modal_in .modal-body p span.green{color:#849c23; font-weight:500;}
-#modal_in .modal-footer{padding:0;}
-#modal_in .modal-footer button{width:100%; background:#849c23; color:#fff; font-size:1.5em; border:none; border-radius:0; padding:15px;}
+#m_work .modal-dialog{position:absolute; bottom:0; margin:0; width:100%;}
+#m_work .modal-dialog .modal-content{border-radius:0; border:none;}
+#m_work .modal-dialog .modal-header button{position:absolute; left:15px; font-size:2.0em; color:#849c23; text-shadow:none; opacity:1; font-weight:400;}
+#m_work .modal-dialog .modal-header h4{text-align:center; font-size:1.5em; font-weight:500;}
+#m_work .modal-body{padding:25px;}
+#m_work .modal-body p{text-align:center; font-size:1.5em; font-weight:400;}
+#m_work .modal-body p span.green{color:#849c23; font-weight:500;}
+#m_work .modal-footer{padding:0;}
+#m_work .modal-footer button{width:100%; background:#849c23; color:#fff; font-size:1.5em; border:none; border-radius:0; padding:15px;}
 
 
 #mon_modify{padding-right:0 !important;}
@@ -166,7 +167,7 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 #mon_modify .modal-content{border-radius:0; border:none; box-shadow:none; height:100%;}
 #mon_modify .modal-header button{position:absolute; left:15px; font-size:2.0em; color:#849c23; text-shadow:none; opacity:1; font-weight:400;}
 #mon_modify .modal-header h4{text-align:center; font-size:1.6em; font-weight:500;}
-#mon_modify .now_info{border-bottom:1px solid #d9d9d9; padding-bottom:20px;}
+#mon_modify .now_info{border-bottom:1px solid #d9d9d9; padding-bottom:10px;}
 #mon_modify .now_info .now:after{display:block; content:''; clear:both;}
 #mon_modify .now_info p{font-size:1.4em;	color:#333;}
 #mon_modify .now_info .calendar p{text-align:center;}
@@ -197,3 +198,21 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 #mon_modify .modal-footer button{width:100%; background:#849c23; color:#fff; font-size:1.5em; border:none; border-radius:0; padding:15px;}
 
 
+/* #MonthPicker_month_pick:before{display: block; content: ''; width: 100%; left: 0; top: 0; height: 100%; position: fixed; background: rgba(0,0,0,0.5);} */
+#MonthPicker_month_pick > div > table{position:relative; z-index:333;}
+#MonthPicker_month_pick .modal-backdrop{position: fixed; width: 100%; background:rgba(0,0,0,0.5); height: 100%; display:block !important;}
+body .month-picker{position:fixed; max-width:250px; width:100%; left:0 !important; top:0 !important; margin:57% auto;}
+body .month-picker .month-picker-header{background:#849c23; position:relative; z-index:333;}
+body .month-picker table{width:100%; padding:10px;}
+body .month-picker tr td.month-picker-title{text-align:center;}
+body .month-picker tr td{color:#fff; font-size:1.0em; font-weight:400; width:63px; height:50px; letter-spacing:-1px; position:relative; padding:10px 0;}
+body .month-picker tr td a:before{position:absolute; font-family:'FontAwesome'; font-size:1.0em;}
+body .month-picker tr td a{color:#fff; width:100%; font-size:1.5em; font-weight:400; letter-spacing:-1px; position:relative;}
+body .month-picker tr td a span.ui-icon{text-indent:-9999px; display:inline-block; width: 30px; position: relative;}
+body .month-picker tr td.month-picker-previous a:before{content:'\f104'; left:15px;}
+body .month-picker tr td.month-picker-next a:before{content:'\f105'; right:15px;}
+body .month-picker-month-table{background:#fff; text-align:center;}
+body .month-picker-month-table tr td a{color:#333; padding:5px 10px; border-radius:5px; font-size:1.3em;}
+body .month-picker-month-table tr td a.ui-state-hover,
+body .month-picker-month-table tr td a.ui-state-active{background:#849c23 !important; color:#fff !important;}
+body .month-picker-month-table tr td a.ui-state-highlight{background:#fff; border:1px solid #849c23; color:#333;}
