--- a/css/default.css
+++ b/css/default.css
@@ -104,9 +104,9 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 #sub_content .report_tit h2{font-size:1.8em; color:#333; font-weight:400;}
 #sub_content .report_tit h2 span.name{color:#849c23; font-weight:500;}
 #sub_content .report_tit p{position:relative; padding-left:30px; margin-top:10px;	}
-#sub_content .report_tit p:before{position:absolute; content:''; width:22px; height:22px; background:url('../images/common_ico.png')no-repeat; background-size:200px; background-position:-35px -158px; left:0; top:0;}
+#sub_content .report_tit p:before{position:absolute; content:''; width:22px; height:22px; background:url('../images/common_ico.png')no-repeat; background-size:200px; background-position:-35px -158px; left:0; top:5px;}
 #sub_content .report_tit .calendar{border:none;}
-#sub_content .report_tit .calendar p a{position:relative; font-size:1.5em; color:#333;}
+#sub_content .report_tit .calendar p input{border:none; font-size:1.3em; color:#333; box-shadow: none; padding:0px; text-align:left;}
 #sub_content .month_report:after{display:block; content:''; clear:both;}
 #sub_content .month_report{border-bottom:1px solid #d9d9d9;}
 #sub_content .month_report p{padding:25px 20px; font-size:1.4em; color:#333; font-weight:400; float:left; width:50%; padding-right:0px;}
@@ -159,7 +159,7 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 #m_work .modal-footer button{width:100%; background:#849c23; color:#fff; font-size:1.5em; border:none; border-radius:0; padding:15px;}
 
 
-#mon_modify{padding-right:0 !important;}
+#mon_modify{padding-right:0 !important; max-width:768px; width:100%; margin:0 auto;}
 #mon_modify .modal-body{background:#fff; padding-bottom:70px;}
 /*
 #mon_modify .modal-dialog{margin:0 auto; width:100%; max-width:768px; background:#fff; position:relative; height:100%;}
@@ -194,11 +194,13 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 #mon_modify .work_form h2{font-size:1.5em;}
 
 
-#mon_modify .modal-footer{padding:0; position:fixed; bottom:0; overflow:hidden; text-align:center; width:100%;}
+#mon_modify .modal-footer{padding:0; position:fixed; bottom:0; overflow:hidden; text-align:center; width:100%; max-width:768px; left:0; right:0; margin:0 auto;}
 #mon_modify .modal-footer button{width:100%; background:#849c23; color:#fff; font-size:1.5em; border:none; border-radius:0; padding:15px;}
 
 
-/* #MonthPicker_month_pick:before{display: block; content: ''; width: 100%; left: 0; top: 0; height: 100%; position: fixed; background: rgba(0,0,0,0.5);} */
+
+
+/* #MonthPicker_month_pick:before{display: block; content: ''; width: 100%; left: 0; top: 0; height: 100%; position: fixed; background: rgba(0,0,0,0.5);} 
 #MonthPicker_month_pick > div > table{position:relative; z-index:333;}
 #MonthPicker_month_pick .modal-backdrop{position: fixed; width: 100%; background:rgba(0,0,0,0.5); height: 100%; display:block !important;}
 body .month-picker{position:fixed; max-width:250px; width:100%; left:0 !important; top:0 !important; margin:57% auto;}
@@ -216,3 +218,4 @@ body .month-picker-month-table tr td a{color:#333; padding:5px 10px; border-radi
 body .month-picker-month-table tr td a.ui-state-hover,
 body .month-picker-month-table tr td a.ui-state-active{background:#849c23 !important; color:#fff !important;}
 body .month-picker-month-table tr td a.ui-state-highlight{background:#fff; border:1px solid #849c23; color:#333;}
+*/
