--- a/css/default.css
+++ b/css/default.css
@@ -206,11 +206,15 @@ button.common_btn{position:relative; background:#fff; border:1px solid #849c23; 
 .work_time .modal-body .pick_area:after{display:block; content:''; clear:both;}
 .work_time .modal-body .pick_area{width:290px; margin: 0 auto;}
 .work_time .modal-body .pick_area > div{float:left; text-align:center; width:28%; max-width:93px;}
+
+.work_time .modal-body .pick_area > div .up:before{left:0; top:0;}
+.work_time .modal-body .pick_area > div .down:before{left:0; top:0;}
+.work_time .modal-body .pick_area > div .action-next i{font-size:3.5em; color:#849c23;}
 .work_time .modal-body .pick_area > div input{display:inline-block; font-size:4.5em; font-weight:500; color:#333; width:100%; border:none; text-align:center;}
-.work_time .modal-body .pick_area .underbar{width:10%;}
-.work_time .modal-body .pick_area .underbar p{display:inline-block; height:85px; line-height:60px; font-size:5.0em;}
-.work_time .modal-body .pick_area .meridian{margin-left:15px;}
-.work_time .modal-body .pick_area .meridian button{width:100%; height:55px; line-height:55px; margin:15px 0; border-radius:0.25em; background:#849c23; display:inline-block; color:#fff; vertical-align:middle; font-size:3.5em; border:0;}
+.work_time .modal-body .pick_area .underbar{width:10%; padding:32px 0;}
+.work_time .modal-body .pick_area .underbar p{display:inline-block; font-size:5.0em;}
+.work_time .modal-body .pick_area .meridian{margin-left:15px; padding:55px 0;}
+.work_time .modal-body .pick_area .meridian button{width:100%; height:55px; line-height:55px; border-radius:0.25em; background:#849c23; display:inline-block; color:#fff; vertical-align:middle; font-size:3.5em; border:0;}
 
 
 /* #MonthPicker_month_pick:before{display: block; content: ''; width: 100%; left: 0; top: 0; height: 100%; position: fixed; background: rgba(0,0,0,0.5);} 
